--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,14 @@
 .display-flex {
   display: flex;
 }
+.section-tittle{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+
+.text-primary{
+  color: #FF900E;
+}
 
 .btn-primary{
   background-color: #FF900E;
@@ -91,16 +99,31 @@ main > section{
      margin-left: 130px;
      max-width: 530px;
 }
-.feature-tittle{
-  font-size: 2.8rem;
-  font-weight: 700;
-}
+
 #quick-list{
    font-weight: 500;
 }
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links ,
+    .teams {
       flex-direction: column;
     }
+    .our-features{
+      margin-left: 20px;
+    }
+    .team-img-container{
+      grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+/* Medium six=ze Device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin-left: 50px auto;
+  }
 }
