--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,55 @@ main > section{
 #quick-list{
    font-weight: 500;
 }
+
+/* Some fact related style  */
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+  border: 1px solid #FF900E;
+  height: 240px;
+  width: 240px;
+  border-radius: 8px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: #424242;
+
+}
+.fact-name{
+  font-size: 20px;
+  font-weight: 600;
+  color: #727272;
+}
+.fact-description{
+  max-width: 540px;
+}
+.facts-container{
+
+}
+
+/* Sponsor related style  */
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+.sponsor-company{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-company img{
+  filter: grayscale(100%);
+}
+
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, 
@@ -113,8 +162,18 @@ main > section{
     .our-features{
       margin-left: 20px;
     }
-    .team-img-container{
+    .team-img-container, 
+    .facts-container,
+    .sponsor-company{
       grid-template-columns: repeat(1, 1fr);
+    }
+    .facts-container, .sponsor-company{
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-company{
+      justify-items: center;
+      gap: 50px;
     }
 }
 
@@ -122,6 +181,7 @@ main > section{
 @media screen and (min-width: 576px) and (max-width: 992px) {
   .teams{
     flex-direction: column;
+  
   }
   .our-features{
     margin-left: 50px auto;
